[ALLI-7056] Fix truncated URL container styles for a Record (#2101)

--- a/themes/finna2/less/finna/record.less
+++ b/themes/finna2/less/finna/record.less
@@ -61,6 +61,9 @@
     a {
       font-size: 15px;
     }
+    .truncate-field.truncate-done {
+      width: 100%;
+    }
     .btn.btn-primary {
       border-radius: 0;
       padding: 0px;
